made the routes aplha is for sparkstraffic and made the postman collection file too
